--- a/wercker.yml
+++ b/wercker.yml
@@ -25,7 +25,7 @@ push-to-releases:
         working-dir: /pipeline/source/
         username: $OKE_USERNAME
         password: $OKE_PASSWORD
-        repository: $OKE_REPOSITORY/$WERCKER_APPLICATION_NAME
+        repository: $OKE_REPOSITORY
         registry: $OKE_REGISTRY
 
 deploy-to-oke:
@@ -39,13 +39,7 @@ deploy-to-oke:
         name: "Visualise Kubernetes config"
         code: cat kubernetes-deployment.yml
     
-    - kubectl:
-        name: delete namespace
-        server: $KUBERNETES_MASTER
-        token: $KUBERNETES_TOKEN
-        insecure-skip-tls-verify: true
-        command: delete namespace $APP_HOTEL_NAMESPACE --ignore-not-found=true
-        
+      
     - script:
         name: wait to delete namespace
         code: sleep 60
@@ -58,15 +52,15 @@ deploy-to-oke:
         command: create namespace $APP_HOTEL_NAMESPACE
 
     - kubectl:
-        name: create OCR secret
+        name: delete deplyoment
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create secret docker-registry ocirsecret --docker-server=iad.ocir.io --docker-username=$OKE_USERNAME --docker-password=$OKE_PASSWORD --docker-email=${WERCKER_APPLICATION_OWNER_NAME}@mail.com --namespace=$APP_HOTEL_NAMESPACE
-        
+        command: delete -f $WERCKER_ROOT/kubernetes-deployment.yml --ignore-not-found=true -n $APP_NAMESPACE
+
     - kubectl:
         name: create deplyoment
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create -f $WERCKER_ROOT/kubernetes-deployment.yml --namespace=$APP_HOTEL_NAMESPACE
+        command: create -f $WERCKER_ROOT/kubernetes-deployment.yml --namespace=$APP_NAMESPACE
